# rag-tutorial

./: README.md  pyproject.toml
app/: config.py  main.py
data/index/: chunks.jsonl  matrix.npz  vectorizer.pkl
data/processed/: documents.jsonl
data/raw/: datasets.json
doc/: DATA.md
homework/: IMPROVEMENTS.md  SUBMISSION.md
scripts/: build_index.py  check_generator.py  check_retrieval.py
